[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sudoku_gaming"]

[project]
name = "sudoku_gaming"
version = "1.0.1"
description = "A sudoku gameplay client."
readme = "README.md"
authors = [{ name = "Lukas Twist", email = "itsluketwist@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["sudoku", "solver", "gameplay"]
dependencies = []
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
]
img = [
    "plotly",
    "kaleido",
]


[project.urls]
Homepage = "https://github.com/itsluketwist/sudoku-gaming"
